11_minikube/deployments/orbit/tracking-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tracking-api
  template:
    metadata:
      labels:
        app: tracking-api
    spec:
      containers:
      - name: tracking-api
        image: tracking-api:latest
        imagePullPolicy: Never 
        volumeMounts: 
        - name: credentials
          mountPath: /meta/credentials
        ports:
        - name: api
          containerPort: 8080
      volumes:
      - name: credentials
        hostPath: 
          path: /mnt/minikube/credentials/tracking-api
          type: Directory
