11_minikube/deployments/orbit/tracking-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking-api
spec:
  selector:
    app: tracking-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: api
