11_minikube/deployments/orbit/tracking-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracking-api
spec:
  rules:
    - host: "tracking-api.minikube"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: tracking-api
                port:
                  name: api
